--- a/assets/sass/dark-mode.scss
+++ b/assets/sass/dark-mode.scss
@@ -83,6 +83,13 @@
                 z-index: -1;
             }
 
+            /* Book pages: code colors */
+            .edition2 {
+                --book-code-color: #{$fixed-width-font-color};
+                --book-code-bg: #{$no-changes-bg-color};
+                --book-code-border: #{$pre-border};
+            }
+
             img {
                 filter: brightness(.6) contrast(1.2);
             }
